[package]
name = "ntm"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.0"
sdl2 = "0.34.5"
gl = "0.6.0"
glam = "0.23.0"
rfd = "0.11.3"
image = "0.24.6"
rand = "0.8.5"
imgui = { version = "0.11.0", features=["docking"] }
imnodes = "0.1.0"
imgui-opengl = "0.1.0"
imgui-sdl2-support = "0.11.0"